[package]
name = "lunar-png"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Ciubix8513/lunar-logger"
license = "MIT"
description = "Simple library for loading png images"
readme = "README.md"
keywords = ["png", "image"]
categories = ["multimedia::images"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = "0.4.42"
flate2 = {version = "1.0.30", features = ["zlib-rs"]}
pack1 = { version = "1.0.0", features = ["bytemuck"] }

[workspace]
resolver = "2"
members = [
  "examples/viewer"
]

[workspace.dependencies.lunar-png]
package = "lunar-png"
path = "./"
