[package]
name = "lunar-png"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Ciubix8513/lunar-logger"
license = "MIT"
description = "Simple library for loading png images"
readme = "README.md"
keywords = ["png", "image"]
categories = ["multimedia::images"]

[features]
encoding = ["dep:chrono", "dep:bytemuck", "dep:pack1", "dep:flate2"]
decoding = ["dep:flate2"]
default = ["encoding", "decoding"]

[dependencies]
flate2 = {version = "1.0.30", features = ["zlib-rs"], optional = true}
chrono = {version = "0.4.42", optional=true}
bytemuck = { version = "1.24.0", features = ["derive"], optional = true}
pack1 = { version = "1.0.0", features = ["bytemuck"], optional = true}

[workspace]
resolver = "2"
members = [
  "examples/viewer"
]

[workspace.dependencies.lunar-png]
package = "lunar-png"
path = "./"
